--- a/index.html
+++ b/index.html
@@ -403,7 +403,58 @@
 
     </main>
 
-<footer> </footer> 
+<footer class="footer"> 
+    <div class="container-footer container">
+
+
+        <div class="logo-container">
+            <a class="footer-logo" href="./index.html">Web<span class="footerspan">Studio</span></a>
+            <p class="footer-text">Incrase the flow of customers and sales for your
+                business with digital marketing
+                & growth solutions.
+            </p>
+
+        </div>
+
+
+
+        <div class="container-footer-media">
+            <p class="title-icon">Social media</p>
+
+            <ul class="footer-icon-list">
+                <li class="footer-icon-item">
+                    <a class="container-footer-icon" href="">
+                        <svg class="footer-icon" width="24" height="24">
+                            <use href="./images/icon.svg#icon-instagram"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="footer-icon-item">
+                    <a class="container-footer-icon" href="">
+                        <svg class="footer-icon" width="24" height="24">
+                            <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="footer-icon-item">
+                    <a class="container-footer-icon" href="">
+                        <svg class="footer-icon" width="24" height="24">
+                            <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="footer-icon-item">
+                    <a class="container-footer-icon" href="">
+                        <svg class="footer-icon" width="24" height="24">
+                            <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+
+</footer> 
    
 
 </body>
